# someNA

./: AUTHORS  Build  Build.PL  Build.PL.in  ChangeLog  Dockerfile  MYMETA.json  MYMETA.yml  Makefile  Makefile.am  Makefile.in  README  README.md  config.status  configure  configure.ac  pack.sh  somena.spec.in  svn-commit.tmp
autom4te.cache/: output.1  requests  traces.0  traces.1
debian/: changelog  control  copyright  init.d.ex  menu.ex  preinst.ex  prerm.ex  rules  watch
examples/: Makefile  Makefile.am  Makefile.in  example.Q  example.Q.reprof  example.fasta  mutations.txt  mutations_example.Q.reprof_F172P  mutations_example.Q.reprof_M1Q  mutations_example.Q.reprof_N34Y  mutations_example.Q.reprof_ORI  query.blastPsi80Rdb  query.blastPsiAli  query.blastPsiOutTmp  query.blastPsiRdb  query.chk  query.clustalngz  query.coils  query.coils_raw  query.disis  query.disulfinder  query.hmm2pfam  query.hmm3pfamDomTbl  query.hmm3pfamTbl  query.hssp  query.hsspPsiFil  query.in  query.loctreeAnimal  query.loctreeAnimalTxt  query.loctreePlantTxt  query.loctreeProkaTxt  query.nls  query.nors  query.norsnet  query.phdNotHtm  query.phdRdb  query.prof1Rdb  query.profAscii  query.profRdb  query.profbval  (+8 more)
lib/: Makefile  Makefile.in
lib/RG/: Makefile  Makefile.am  Makefile.in  SomeNA.pm.mk
lib/RG/SomeNA/: Converter.pm  Makefile  Makefile.in  SomeNA.pm  blastPsiMat.pm  coils.pm  fasta.pm  profbval.pm
scripts/: Makefile  Makefile.am  Makefile.in  reprof  somena  somena.1
share/: Makefile  Makefile.am  Makefile.in  dna_all_1_1.features  dna_all_2_1.model  dna_all_2_2.features  dna_all_3_1.features  dna_all_4_1.features  dna_all_5_1.features  dna_only_1_1.model  dna_only_1_2.features  dna_only_1_2.model  dna_only_2_1.features  dna_only_2_1.model  dna_only_3_1.features  dna_only_3_1.model  dna_only_3_2.features  dna_only_3_2.model  dna_only_4_1.features  dna_only_4_1.model  dna_only_5_1.features  dna_only_5_1.model  dna_only_5_2.features  dna_only_5_2.model  rna_all_1_1.features  rna_all_2_1.features  rna_all_3_1.model  rna_all_3_2.model  rna_all_4_1.features  rna_all_4_1.model  rna_all_4_2.features  rna_all_4_2.model  rna_all_5_1.features  rna_only_1_1.features  rna_only_1_1.model  rna_only_2_1.features  rna_only_2_1.model  rna_only_2_2.features  rna_only_2_2.model  rna_only_3_1.features  (+28 more)
someNA/: Makefile.am
someNA/examples/: query.asp  query.blastPsiMat  query.blastpSwissM8  query.fasta  query.hmm3pfam  query.hssp80  query.isis  query.loctreePlant  query.loctreeProka  query.mdisorder  query.phdPred  query.psic  query.segNorm
someNA/lib/RG/SomeNA/: isis.pm  reprof.pm
someNA/share/: dna_all_1_1.model  dna_all_2_1.features  dna_all_2_2.model  dna_all_3_1.model  dna_all_4_1.model  dna_all_5_1.model  dna_only_1_1.features  rna_all_1_1.model  rna_all_2_1.model  rna_all_3_1.features  rna_all_3_2.features  rna_all_5_1.model  rna_only_4_1.features  xna_all_4_1.features  xna_all_4_1.model  xna_all_4_2.model  xna_only_2_1.features  xna_only_2_2.features  xna_only_3_1.model  xna_only_3_2.model  xna_only_4_1.features  xna_only_5_1.features
