dist_pkgdata_DATA = $(srcdir)/*.model $(srcdir)/*.features
#dist_pkgdata_DATA = a.model a.features u.model u.features b.model b.features uu.model uu.features ub.model ub.features bu.model bu.features bb.model bb.features fa.model fa.features fu.model fu.features fb.model fb.features fuu.model fuu.features fub.model fub.features fbu.model fbu.features fbb.model fbb.features
